# Sqime

./: .gitignore  @  AllHitboxInf.cpp  Box.cpp  Button.cpp  CMakeLists.txt  DynamicButton.cpp  DynamicButtonCreatingUI.cpp  DynamicObject.cpp  LevelMap.cpp  LevelMenu.cpp  MainMenu.cpp  MapForCreating.cpp  MyMap.cpp  Platform.cpp  Player.cpp  README.md  SizeChooseMenu.cpp  Slider.cpp  SliderButton.cpp  Sqime.cbp  Sqime.depend  Sqime.layout  Tile7.psp  desktop.ini  main.cpp
include/: AllHitboxInf.h  AllIncludes.h  Box.h  Button.h  DynamicButton.h  DynamicButtonCreatingUI.h  DynamicObject.h  FloatComparation.h  LevelMap.h  LevelMenu.h  MainMenu.h  MapForCreating.h  MyMap.h  Platform.h  Player.h  SizeChooseMenu.h  Slider.h  SliderButton.h
maps/: level00.txt  level01.txt  level02.txt  level03.txt  level04.txt  level05.txt  level06.txt  level07.txt  level08.txt  map.txt  map2.txt  map3.txt  map4.txt  mapt.txt
settings/: levelsCoords.txt  levelsPassed.txt  levelsReached.txt  levelsUnlockingByLevel.txt  mapTilesForLevels.txt  tilesButtonsInformation.txt
src/: AllHitboxInf.cpp  Button.cpp  DynamicButton.cpp  DynamicButtonCreatingUI.cpp  DynamicObject.cpp  LevelMap.cpp  LevelMenu.cpp  MainMenu.cpp  MapForCreating.cpp  MyMap.cpp  Platform.cpp  Player.cpp  SizeChooseMenu.cpp  Slider.cpp
